# django-admin-rest-api

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
django_admin_rest_api/: __init__.py  apps.py  audit.py  conf.py  system_checks.py  urls.py
django_admin_rest_api/api/: README.md  __init__.py  actions_meta.py  dates.py  filters.py  form_spec.py  inlines.py  inlines_write.py  panels.py  permissions.py  registry.py  serializers.py  urls.py  writes.py
django_admin_rest_api/api/views/: README.md  __init__.py  actions.py  auth.py  autocomplete.py  base.py  bulk.py  create.py  create_form.py  delete_preview.py  destroy.py  detail.py  form_spec.py  history.py  list.py  object_actions.py  password.py  recent_actions.py  registry.py  schema.py  update.py
django_admin_rest_api/management/commands/: admin_rest_api_check.py
docs/: api-contract.md
examples/minimal_project/: README.md  manage.py
examples/minimal_project/minimal_project/: admin.py  models.py  settings.py  urls.py
tests/: README.md  conftest.py  helpers.py  test_actions.py  test_admin_rest_api_check.py  test_auth.py  test_autocomplete.py  test_bulk_update.py  test_create.py  test_create_form.py  test_custom_user_model_safety.py  test_date_hierarchy.py  test_delete.py  test_delete_preview.py  test_detail.py  test_doc_references.py  test_file_field.py  test_file_upload.py  test_form_spec.py  test_history.py  test_i18n.py  test_inlines.py  test_inlines_write.py  test_list.py  test_list_filter.py  test_logentry.py  test_manytomany.py  test_method_not_allowed.py  test_object_actions.py  test_panels.py  test_password.py  test_range_write.py  test_recent_actions.py  test_registry.py  test_registry_get_app_list.py  test_schema.py  test_security.py  test_security_hardening.py  test_security_logging.py  test_serializers.py  (+4 more)
tests/test_project/: README.md  settings.py  urls.py
tests/test_project/jobs/: admin.py  apps.py  models.py
tests/test_project/jobs/migrations/: 0001_initial.py
tests/test_project/jobs/templates/admin/jobs/job/: run_custom.html
tests/test_project/uploads/: admin.py  apps.py  models.py
tests/test_project/uploads/migrations/: 0001_initial.py
